# esg-water-scorer

./: .env  .gitignore  README.md  pyproject.toml  run_pipeline.sh
config/: indicators.yml  universe.yml  weights.yml
data/processed/: backtest_quintiles.csv  engineered_water_features.parquet  forward_returns_12m.parquet  leaderboard_water_enriched.csv  ml_scores.parquet  model.joblib  model_features.parquet  rankings.csv  rankings_clean.csv  rankings_ml.csv  rankings_ml_covered.csv  rankings_ml_enriched.csv  rankings_ml_percentile.csv  rankings_no_spac.csv  shap_global.csv  symbol_map.csv  target_triple_adjusted_summary.txt  top100.csv  top100_ml.csv  train_meta.json  universe_filtered.parquet  universe_latest.meta.json  universe_latest.parquet
data/raw/: facilities.csv  fundamentals.csv  labels.csv  manual_features.csv
data/raw/alphavantage/: listing_status_active_2025-11-05.csv  listing_status_delisted_2025-11-05.csv
data/raw/universe/: universe_2025-11-05.csv
data/reference/: aqueduct_lookup.csv  exchange_country.csv  sector_water_vulnerability.csv
deliverable/: rankings_ml_percentile.csv  target_triple_adjusted_summary.txt  train_meta.json
models/esgwater/: metrics.json  model.joblib
scripts/: aqueduct_seed.py  av_populate.py  build_labels_triple.py  diag_features.py  forward_returns_12m.py  fundamentals_yf.py  fundamentals_yf_fast.py  ticker_map_yf.py  yf_populate.py
src/esgwater/: cli.py
src/esgwater/features/: build_features.py  water_ops.py
src/esgwater/models/: explain.py  train.py
src/esgwater/scoring/: score.py  train.py
