[project]
name = "esgwater"
version = "0.1.0"
description = "Transparent ESG + Water Risk scoring"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "requests>=2.32",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.8",
  "plotly>=5.22",
  "shap>=0.46"
]

[project.optional-dependencies]
full = ["spacy", "beautifulsoup4", "lxml"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"